--- a/index.html
+++ b/index.html
@@ -7,8 +7,46 @@
   </head>
   <body>
 
-    <h1>Discover hidden places in the World around you</h1>
-    <p href="#index.html">Download Excursion! (Coming Soon!)</p>
+    <div class="header">
+      <h1>Discover hidden places in the World around you</h1>
+    <div>
+
+    <div class="download">
+      <p><a href="#">Download Excursion! (Coming Soon!)</a></p>
+    </div>
+
+    <div class="video">
+      <video autoplay muted loop><source src="resources/videos/excursion.mp4" type="video/mp4">
+      Video not available </video>
+    </div>
+
+    <div class="subheader">
+      <h2>Your personal travel guide</h2>
+    </div>
+
+    <div class="info">
+      <p>Excursion remembers places you like, and recommends new points of interest around you</p>
+    </div>
+
+    <div>
+      <img src="resources/images/camp.jpg">
+    </div>
+
+    <div>
+      <img src="resources/images/phone.png">
+    </div>
+
+    <div class="subheader">
+      <h2>coming soon for iPhone and Android</h2>
+    </di>
+
+    <div class="download">
+      <p><a href="#">Download Excursion! (Coming Soon!)</a></p>
+    </div>
+
+    <div class="footer">
+      <p>	&#169; Excursion </p>
+    </div>
 
   </body>
 </html>
