add initial styling

--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800,800i" rel="stylesheet">
   </head>
   <body>
 
     <div class="header">
-      <h1>Discover hidden places in the World around you</h1>
+      <h1>Discover hidden places<br /> in the world around you</h1>
     <div>
 
     <div class="download">
-      <p><a href="#">Download Excursion! (Coming Soon!)</a></p>
+      <p><a href="#">Download Excursion! (Coming Soon)</a></p>
     </div>
 
     <div class="video">
@@ -37,11 +38,11 @@
     </div>
 
     <div class="subheader">
-      <h2>coming soon for iPhone and Android</h2>
+      <h3>coming soon<br />for iPhone and Android</h3>
     </di>
 
     <div class="download">
-      <p><a href="#">Download Excursion! (Coming Soon!)</a></p>
+      <p><a href="#">Download Excursion! (Coming Soon)</a></p>
     </div>
 
     <div class="footer">
