add text and spacing styling

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800,800i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300i,400,400i,600,800" rel="stylesheet">
   </head>
   <body>
 
@@ -12,13 +12,13 @@
       <h1>Discover hidden places<br /> in the world around you</h1>
     <div>
 
-    <div class="download">
-      <p><a href="#">Download Excursion! (Coming Soon)</a></p>
-    </div>
-
     <div class="video">
       <video autoplay muted loop><source src="resources/videos/excursion.mp4" type="video/mp4">
       Video not available </video>
+    </div>
+
+    <div class="download">
+      <p><a href="#">Download Excursion! (Coming Soon)</a></p>
     </div>
 
     <div class="subheader">
@@ -26,20 +26,17 @@
     </div>
 
     <div class="info">
-      <p>Excursion remembers places you like, and recommends new points of interest around you</p>
+      <p><i>Excursion remembers places you like, and recommends new points of interest around you</i></p>
     </div>
 
     <div>
-      <img src="resources/images/camp.jpg">
+      <img src="resources/images/camp.jpg" style="width: 80%;">
     </div>
 
-    <div>
-      <img src="resources/images/phone.png">
-    </div>
-
-    <div class="subheader">
+    <div class="phone">
+      <img src="resources/images/phone.png" style="width: 5%;">
       <h3>coming soon<br />for iPhone and Android</h3>
-    </di>
+    </div>
 
     <div class="download">
       <p><a href="#">Download Excursion! (Coming Soon)</a></p>
