--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class="phone">
-      <img src="resources/images/phone.png" style="width: 5%;">
+      <img src="resources/images/phone.png" style="width: 5%; opacity: 0.70;">
       <h3>coming soon<br />for iPhone and Android</h3>
     </div>
 
